tests/baselines/reference/templateLiteralInvalidEscape.errors.txt
tests/cases/compiler/templateLiteralInvalidEscape.ts(11,4): error TS1125: Hexadecimal digit expected.
tests/cases/compiler/templateLiteralInvalidEscape.ts(12,5): error TS1125: Hexadecimal digit expected.
tests/cases/compiler/templateLiteralInvalidEscape.ts(13,6): error TS1125: Hexadecimal digit expected.
tests/cases/compiler/templateLiteralInvalidEscape.ts(14,5): error TS1125: Hexadecimal digit expected.
tests/cases/compiler/templateLiteralInvalidEscape.ts(15,4): error TS1433: Octal escape sequences are not allowed in template strings.
tests/cases/compiler/templateLiteralInvalidEscape.ts(23,8): error TS1125: Hexadecimal digit expected.
tests/cases/compiler/templateLiteralInvalidEscape.ts(24,9): error TS1125: Hexadecimal digit expected.
tests/cases/compiler/templateLiteralInvalidEscape.ts(25,10): error TS1125: Hexadecimal digit expected.
tests/cases/compiler/templateLiteralInvalidEscape.ts(26,9): error TS1125: Hexadecimal digit expected.
tests/cases/compiler/templateLiteralInvalidEscape.ts(27,8): error TS1433: Octal escape sequences are not allowed in template strings.


==== tests/cases/compiler/templateLiteralInvalidEscape.ts (10 errors) ====
    function raw(arr: TemplateStringsArray, ...args: unknown[]) {
      return arr.raw;
    }
    
    raw`\x`;
    raw`\x0`;
    raw`\u11`;
    raw`\u{}`;
    raw`\0123`;
    
    `\x`;
       
!!! error TS1125: Hexadecimal digit expected.
    `\x0`;
        
!!! error TS1125: Hexadecimal digit expected.
    `\u11`;
         
!!! error TS1125: Hexadecimal digit expected.
    `\u{}`;
        
!!! error TS1125: Hexadecimal digit expected.
    `\0123`;
       
!!! error TS1433: Octal escape sequences are not allowed in template strings.
    
    raw`${0}\x`;
    raw`${0}\x0`;
    raw`${0}\u11`;
    raw`${0}\u{}`;
    raw`${0}\0123`;
    
    `${0}\x`;
           
!!! error TS1125: Hexadecimal digit expected.
    `${0}\x0`;
            
!!! error TS1125: Hexadecimal digit expected.
    `${0}\u11`;
             
!!! error TS1125: Hexadecimal digit expected.
    `${0}\u{}`;
            
!!! error TS1125: Hexadecimal digit expected.
    `${0}\0123`;
           
!!! error TS1433: Octal escape sequences are not allowed in template strings.
    